Fix: making search return PropertyResponseDto Fix: formatting pageable Dto according to project standarts